comments and polishing

--- a/digitalSecurity.html
+++ b/digitalSecurity.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set, viewport, description, and keywords -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore digital security strategies to safeguard your online presence from cyber threats and privacy breaches.">
     <meta name="keywords" content="digital security, cybersecurity, data encryption, password management, two-factor authentication">
     <title>Security Basics</title>
+    <!-- Links to external stylesheets -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="slider.css">
 </head>
 <body>
+    <!-- Navigation bar -->
     <nav>
         <div class="logo">
+            <!-- Logo linking to home page -->
             <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
+            <!-- Navigation links to different sections -->
             <a href="./index.html">Home</a>
             <a href="./physicalSecurity.html">Physical Security</a>
             <a href="./digitalSecurity.html">Digital Security</a>
@@ -22,17 +27,24 @@
             <a href="./about.html">About</a>
         </div>
     </nav>
+    <!-- Main section -->
     <section class="hero">
-        <h1>Digital Security</h1>
         <div class="hero-container">
             <div class="column-left">
+                <!-- Slider container -->
                 <div class="slider-container">
+                    <!-- Slider with digital security content -->
+                    <h1>Digital Security</h1>
+                    <p><strong>Digital security protects digital assets like data, networks, and devices from unauthorized access and cyber threats through measures like encryption and strong authentication.</strong></p>
                     <div class="slider">
+                        <!-- Slide 1: Password Security -->
                         <div class="slide">
                             <h2>Password Security</h2>
                             <p>In this section discusses the importance of password security and recommends the use of a password manager. They also highlight the benefits of using an authenticator app for two-factor authentication.</p>
+                            <!-- Highlights of password security -->
                             <h3>Highlights</h3>
                             <ul>
+                                <!-- List of password security highlights -->
                                 <li><strong>🔐 Password Managers:</strong> Password managers are essential for securely storing and managing multiple passwords.</li>
                                 <li><strong>🔒 Bit Warden:</strong> Bit Warden is a recommended password manager that offers strong encryption and complies with privacy regulations.</li>
                                 <li><strong>🔑 Password Generation:</strong> Password managers allow for the generation of long and complex passwords, as well as syncing across devices.</li>
@@ -42,12 +54,14 @@
                                 <li><strong>🛡️ Combined Security Measures:</strong> Using a password manager and enabling two-factor authentication helps protect sensitive information and ensures unique passwords for each account.</li>
                             </ul>
                         </div>
+                        <!-- Slide 2: Browser Security -->
                         <div class="slide">
-                            <h1>Digital Security</h1>
                             <h2>Browser Security</h2>
                             <p>Browser security is important to ensure the safety of our browsing experience. Different browsers have their own security settings that can be customized to enhance protection. It is recommended to review and adjust permissions granted to websites to ensure privacy and avoid intrusive access. Additional security measures such as enabling HTTPS-only mode and disabling data collection can further enhance browser security.</p>
+                            <!-- Highlights of browser security -->
                             <h3>Highlights</h3>
                             <ul>
+                                <!-- List of browser security highlights -->
                                 <li><strong>🛡️ Customize browser security settings:</strong> to enhance protection.</li>
                                 <li><strong>🚫 Review and adjust permissions:</strong> granted to websites to ensure privacy.</li>
                                 <li><strong>🔒 Enable HTTPS-only mode:</strong> for secure browsing.</li>
@@ -57,28 +71,33 @@
                                 <li><strong>🌐 Consider using Firefox and Tor:</strong> for enhanced anonymity.</li>
                             </ul>
                         </div>
+                        <!-- Slide 3: HTTPS and Extensions -->
                         <div class="slide">
-                            <h1>Digital Security</h1>
                             <h2>HTTPS and Extensions</h2>
                             <p>This section discusses the importance of HTTPS and browser extensions in keeping browsing safe.</p>
                             <ul>
-                                <li><strong>🔒 HTTPS:</strong> HTTPS stands for secure browsing, and it is indicated by a lock symbol in the URL bar. Most websites now use HTTPS, but smaller websites may not have it. It is crucial to use HTTPS when providing sensitive information or making payments online.</li>
-                                <li><strong>🌐 Encrypted DNS:</strong> DNS translates domain names to IP addresses and can be encrypted to protect privacy. Encrypted DNS services can also block ads and enhance security.</li>
-                                <li><strong>🛡️ Browser Extensions:</strong> Browser extensions like uBlock Origin, HTTPS Everywhere, and Clean URLs can improve browsing safety by blocking ads and protecting against malicious websites.</li>
+                                <!-- List of highlights for HTTPS and extensions -->
+                                <li><strong>🔒 HTTPS ensures secure browsing</strong> and protects sensitive information.</li>
+                                <li><strong>🌐 Encrypted DNS enhances privacy</strong> and security while browsing.</li>
+                                <li><strong>🛡️ Browser extensions can block ads</strong> and protect against malicious websites.</li>
                             </ul>
+                            <!-- Highlights of HTTPS and extensions -->
                             <h3>Highlights</h3>
                             <ul>
+                                <!-- List of highlights for HTTPS and extensions -->
                                 <li><strong>🔒 HTTPS ensures secure browsing</strong> and protects sensitive information.</li>
                                 <li><strong>🌐 Encrypted DNS enhances privacy</strong> and security while browsing.</li>
                                 <li><strong>🛡️ Browser extensions can block ads</strong> and protect against malicious websites.</li>
                             </ul>
                         </div>
+                        <!-- Slide 4: Backups -->
                         <div class="slide">
-                            <h1>Digital Security</h1>
                             <h2>Backups</h2>
                             <p>Backups are essential for protecting your data from ransomware attacks, hard drive crashes, and data corruption. Automatic backups are available for certain devices, but additional storage may need to be purchased. Cloud backup services offer convenience and accessibility, but manual backups to external drives are also an option. Encryption options vary, with some cloud services offering encrypted storage but potentially sacrificing convenience and features. Consider your threat model and privacy concerns when choosing a backup solution.</p>
+                            <!-- Highlights of backups -->
                             <h3>Highlights</h3>
                             <ul>
+                                <!-- List of highlights for backups -->
                                 <li><strong>💽 Backups are crucial</strong> for defending against ransomware attacks and data loss.</li>
                                 <li><strong>💾 Automatic backups</strong> are available for certain devices, but limited storage may require additional purchases.</li>
                                 <li><strong>☁️ Cloud backup services</strong> offer convenience and accessibility, but encrypted options may sacrifice convenience and features.</li>
@@ -86,12 +105,14 @@
                                 <li><strong>⚠️ Consider your threat model</strong> and privacy concerns when choosing a backup solution.</li>
                             </ul>
                         </div>
+                        <!-- Slide 5: Regular Software Updates -->
                         <div class="slide">
-                            <h1>Digital Security</h1>
                             <h2>Regular Software Updates</h2>
                             <p>Regularly updating software and apps is crucial for device security and functionality. Updates often occur seamlessly in the background, but manual updates may be required for certain apps. Rebooting devices to install updates is important, as updates provide new features and security patches. Different devices have varying update frequencies, with Apple devices receiving longer support than most Android devices.</p>
+                            <!-- Highlights of regular software updates -->
                             <h3>Highlights</h3>
                             <ul>
+                                <!-- List of highlights for regular software updates -->
                                 <li><strong>💻 Regularly update software and apps</strong> on devices for security and new features.</li>
                                 <li><strong>🔄 Updates often occur in the background</strong>, but manual updates may be necessary.</li>
                                 <li><strong>📱 Reboot devices when prompted</strong> to install updates for optimum security.</li>
@@ -102,25 +123,29 @@
                             </ul>
                         </div>
                     </div>
+                    <!-- Button container for slider navigation -->
                     <div class="button-container">
+                        <!-- Buttons to navigate through slides -->
                         <button class="prev" onclick="prevSlide()">Previous</button>
                         <button class="next" onclick="nextSlide()">Next</button>
                     </div>
                 </div>
             </div>
             <div class="column-right">
+                <!-- Image linking to digital security section -->
                 <a href="./digitalSecurity" title="Digital Security">
                     <img src="assets/images/digital.png" alt="illustration" class="hero-image">
                 </a>
             </div>
         </div>
     </section>
-
+    <!-- Script for slider functionality -->
     <script src="slider.js" defer></script>
-
+    <!-- Footer section -->
     <footer>
         <div class="container">
             <div class="footer-content">
+                <!-- Social media links -->
                 <div class="social-media-links">
                     <a href="https://www.facebook.com" target="_blank">
                         <img src="assets/social/facebook.svg" alt="Facebook">
