--- a/index.html
+++ b/index.html
@@ -1,73 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set, viewport, description, and keywords -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about the fundamentals of security, including physical and digital security measures, secure communication practices, and more.">
     <meta name="keywords" content="security, basics, physical security, digital security, communications, internet, privacy, encryption, cyber security">
     <title>Security Basics</title>
+    <!-- Link to external stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <!-- Navigation bar -->
     <nav>
         <div class="logo">
+            <!-- Logo linking to home page -->
             <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
-          <a href="./index.html">Home</a>
-          <a href="./physicalSecurity.html">Physical Security</a>
-          <a href="./digitalSecurity.html">Digital Security</a>
-          <a href="./communications.html">Communications</a>
-          <a href="./about.html">About</a>
-      </div>
+            <!-- Navigation links to different sections -->
+            <a href="./index.html">Home</a>
+            <a href="./physicalSecurity.html">Physical Security</a>
+            <a href="./digitalSecurity.html">Digital Security</a>
+            <a href="./communications.html">Communications</a>
+            <a href="./about.html">About</a>
+        </div>
     </nav>
+    <!-- Main section -->
     <section class="hero">
         <div class="hero-container">
             <div class="column-left">
+                <!-- Title and description of the course -->
                 <h1>Personal Technical Security</h1>
                 <p><strong>This course is designed to offer comprehensive personal, technical, and security guidance, empowering individuals to navigate the online world securely.<br>
                   The goal in creating this site is to address common security concerns, providing recommendations on tools and practices to bolster digital safety.</strong></p>
             </div>
-            <!-- Images and Sections-->
+            <!-- Hero sections for different security topics -->
             <div class="hero-section" id="physical">
+                <!-- Image and link for physical security -->
                 <img src="assets/images/person.png" alt="Physical Security" class="hero-image">
                 <h2>Physical Security</h2>
                 <a href="./physicalSecurity.html" class="button">Get Started</a>
             </div>
             <div class="hero-section" id="digital">
+                <!-- Image and link for digital security -->
                 <img src="assets/images/digital.png" alt="Digital Security" class="hero-image">
                 <h2>Digital Security</h2>
                 <a href="./digitalSecurity.html" class="button">Get Started</a>
             </div>
             <div class="hero-section" id="communications">
+                <!-- Image and link for communications security -->
                 <img src="assets/images/globe.png" alt="Communications" class="hero-image">
                 <h2>Communications</h2>
                 <a href="./communications.html" class="button">Get Started</a>
             </div>
         </div>
     </section>
+    <!-- Footer section -->
     <footer>
-      <div class="container">
-          <div class="footer-content">
-              <div class="social-media-links">
-                  <a href="https://www.facebook.com" target="_blank">
-                      <img src="assets/social/facebook.svg" alt="Facebook">
-                  </a>
-                  <a href="https://www.twitter.com" target="_blank">
-                      <img src="assets/social/twitter.png" alt="Twitter">
-                  </a>
-                  <a href="https://www.instagram.com" target="_blank">
-                      <img src="assets/social/instagram.svg" alt="Instagram">
-                  </a>
-                  <a href="https://www.youtube.com" target="_blank">
-                      <img src="assets/social/youtube.svg" alt="You">
-                  </a>
-                  <a href="https://www.linkedin.com" target="_blank">
-                      <img src="assets/social/linkedin.svg" alt="LinkedIn">
-                  </a>
-              </div>
-          </div>
-      </div>
-  </footer>
+        <div class="container">
+            <div class="footer-content">
+                <!-- Social media links -->
+                <div class="social-media-links">
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img src="assets/social/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="https://www.twitter.com" target="_blank">
+                        <img src="assets/social/twitter.png" alt="Twitter">
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img src="assets/social/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="https://www.youtube.com" target="_blank">
+                        <img src="assets/social/youtube.svg" alt="You">
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <img src="assets/social/linkedin.svg" alt="LinkedIn">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
