--- a/physicalSecurity.html
+++ b/physicalSecurity.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set, viewport, description, and keywords -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about physical security best practices to protect your personal and business assets.">
     <meta name="keywords" content="physical security, security measures, access control, surveillance, theft prevention">
     <title>Security Basics</title>
+    <!-- Link to external stylesheets -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="slider.css">
 </head>
 <body>
+    <!-- Navigation bar -->
     <nav>
         <div class="logo">
+            <!-- Logo linking to home page -->
             <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
+            <!-- Navigation links to different sections -->
             <a href="./index.html">Home</a>
             <a href="./physicalSecurity.html">Physical Security</a>
             <a href="./digitalSecurity.html">Digital Security</a>
@@ -22,20 +27,23 @@
             <a href="./about.html">About</a>
         </div>
     </nav>
-
+    <!-- Main section -->
     <section class="hero">
-        <h1>Physical Security</h1>
         <div class="hero-container">
             <div class="column-left">
                 <div class="slider-container">
+                    <h1>Physical Security</h1>
+                    <p><strong>Physical security in cyber is about protecting the tangible assets like servers and data centers from unauthorized access, theft, or damage, which could compromise digital security.</strong></p>
                     <div class="slider">
+                        <!-- Slides for different aspects of physical security -->
                         <div class="slide">
-        
+                            <!-- Laptop Security -->
                             <h2>Laptop Security</h2>
                             <p>Laptops and desktops hold sensitive information that can be accessed if someone gains physical access to the device. 
                                 It is important to secure these devices with strong passwords and enable auto lock features. Encrypting the data on the device can further enhance security. 
                                 Biometrics should not be solely relied upon for device authentication. Disabling USB ports and being cautious when using someone else's computer are additional security measures to consider.</p>
                             <h3><strong>Highlights</strong></h3>
+                            <!-- Key highlights of laptop security -->
                             <ul>
                                 <li><strong>💻 Strong Password:</strong> Put a strong password on your laptop or desktop to prevent unauthorized access.</li>
                                 <li><strong>🔐 Longer Passwords:</strong> Longer passwords are stronger and more difficult to crack.</li>
@@ -48,12 +56,14 @@
                             </ul>
                         </div>
                         <div class="slide">
+                            <!-- Phone Security -->
                             <h2>Phone Security</h2>
                             <p>Phone security is important as our phones carry a lot of sensitive information, such as private photos and sensitive documents. 
                                 Phones are becoming more powerful and like mini PCs, so it's crucial to protect them. Setting a password or pin code is the first step, and using a long pin code or a combination of pin code and fingerprint is recommended. 
                                 Encrypting our phones is also important and most phones come with this feature enabled. Locking the SIM card and enabling Smart Lock on Android can further enhance security. Guest mode is useful when sharing the phone with others. 
                                 When charging the phone, it is advised to use your own charger and avoid public chargers to prevent data theft. Finally, it is recommended to know how to remotely wipe your phone in case it gets lost or stolen.</p>
                             <h3><strong>Highlights</strong></h3>
+                            <!-- Key highlights of phone security -->
                             <ul>
                                 <li><strong>📱 Sensitive Information:</strong> Phone security is crucial as they carry sensitive information.</li>
                                 <li><strong>🔒 Password Protection:</strong> Setting a password or pin code is the first step in protecting the phone.</li>
@@ -66,12 +76,14 @@
                             </ul>
                         </div>
                         <div class="slide">
+                            <!-- Device Wiping Summary -->
                             <h2>Device Wiping Summary</h2>
                             <p>Wiping your device is important to protect your data when trading, recycling, or giving it away. 
                                 Attackers can easily access your personal information from old devices. 
                                 Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. 
                                 Consider your threat model and never give away a device without wiping it clean.</p>
                             <h3><strong>Highlights</strong></h3>
+                            <!-- Key highlights of device wiping summary -->
                             <ul>
                                 <li><strong>📵 Wiping your device:</strong> Wiping your device is important to protect your data when trading, recycling, or giving it away. Attackers can easily access your personal information from old devices.</li>
                                 <li><strong>📴 Disconnecting your account and doing a factory reset:</strong> Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. Consider your threat model and never give away a device without wiping it clean.</li>
@@ -80,9 +92,11 @@
                             </ul>
                         </div>
                         <div class="slide">
+                            <!-- Other Security Tips -->
                             <h2>Other Security Tips</h2>
                             <p>This section provides tips for keeping your data secure, including shredding documents, using a safe, securing printers, and securing Internet of Things devices.</p>
                             <h3><strong>Highlights</strong></h3>
+                            <!-- Key highlights of other security tips -->
                             <ul>
                                 <li><strong>📄 Shredding documents:</strong> Shredding documents is important to ensure that sensitive information cannot be accessed or recreated.</li>
                                 <li><strong>🔒 Using a safe:</strong> Storing important physical documents in a fireproof safe adds an extra layer of protection.</li>
@@ -93,6 +107,7 @@
                                 <li><strong>🔋 Power-saving measures:</strong> Turning off printers when not in use saves electricity and reduces the risk of unauthorized access.</li>
                             </ul>
                         </div>
+                        <!-- Button container for previous and next slides -->
                         <div class="button-container">
                             <button class="prev" onclick="prevSlide()">Previous</button>
                             <button class="next" onclick="nextSlide()">Next</button>
@@ -101,19 +116,20 @@
                 </div>
             </div>
             <div class="column-right">
+                <!-- Link to communications section -->
                 <a href="./communications.html" title="Communications">
                     <img src="assets/images/person.png" alt="illustration" class="hero-image">
                 </a>
             </div>
         </div>
-        
     </section>
-
+    <!-- Script for slider functionality -->
     <script src="slider.js" defer></script>
-
+    <!-- Footer section -->
     <footer>
         <div class="container">
             <div class="footer-content">
+                <!-- Social media links -->
                 <div class="social-media-links">
                     <a href="https://www.facebook.com" target="_blank">
                         <img src="assets/social/facebook.svg" alt="Facebook">
