Few more changes to Index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -38,19 +38,25 @@
             <!-- Hero sections for different security topics -->
             <div class="hero-section" id="physical">
                 <!-- Image and link for physical security -->
-                <img src="assets/images/person.png" alt="Physical Security" class="hero-image">
+                <a href="./physicalSecurity.html" title="Physical Security">
+                  <img src="assets/images/person.png" alt="Physical Security" class="hero-image">
+              </a>
                 <h2>Physical Security</h2>
                 <a href="./physicalSecurity.html" class="button">Get Started</a>
             </div>
             <div class="hero-section" id="digital">
                 <!-- Image and link for digital security -->
-                <img src="assets/images/digital.png" alt="Digital Security" class="hero-image">
+                <a href="./digitalSecurity.html" title="Digital Security">
+                  <img src="assets/images/digital.png" alt="Digital Security" class="hero-image">
+              </a>
                 <h2>Digital Security</h2>
                 <a href="./digitalSecurity.html" class="button">Get Started</a>
             </div>
             <div class="hero-section" id="communications">
                 <!-- Image and link for communications security -->
-                <img src="assets/images/globe.png" alt="Communications" class="hero-image">
+                <a href="./communications.html" title="Communications Security">
+                  <img src="assets/images/globe.png" alt="Communications" class="hero-image">
+              </a>
                 <h2>Communications</h2>
                 <a href="./communications.html" class="button">Get Started</a>
             </div>
